--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -722,6 +722,18 @@
   timestamp    = {2018.11.11},
 }
 
+@Article{Alexander2019,
+  author    = {Alexander, S.},
+  title     = {Social Network Analysis and the Scale of Modernist Fiction},
+  journal   = {Modernism/modernity Print Plus},
+  year      = {2019},
+  volume    = {3},
+  number    = {4},
+  doi       = {10.26597/mod.0086},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Alexopoulos2010,
   author    = {Alexopoulos, E.},
   title     = {Introduction to Multivariate Regression Analysis},
@@ -802,6 +814,17 @@
   doi       = {10.1007/11573548_86},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Almeida2014,
+  author    = {Almeida, M. S. C. and Almeida, M. B. and Martins, A. F. T.},
+  title     = {A Joint Model for Quotation Attribution and Coreference Resolution},
+  booktitle = {14th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2014},
+  pages     = {39-48},
+  doi       = {10.3115/v1/e14-1005},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @InProceedings{AlOmran2017,
@@ -1710,6 +1733,17 @@
   url       = {https://utpress.utexas.edu/books/bakess},
 }
 
+@InProceedings{Bakshy2012,
+  author    = {Bakshy, E. and Rosenn, I. and Marlow, C. and Adamic, L.},
+  title     = {The Role of Social Networks in Information Diffusion},
+  booktitle = {21st international conference on World Wide Web},
+  year      = {2012},
+  pages     = {519-528},
+  doi       = {10.1145/2187836.2187907},
+  owner     = {Vincent},
+  timestamp = {2012.02.13},
+}
+
 @Book{Bal2009,
   title     = {Narratology: Introduction to the Theory of Narrative},
   publisher = {University of Toronto Press},
@@ -1862,6 +1896,28 @@
   owner     = {Vincent},
   timestamp = {2017.12.07},
   url       = {http://acl2014.org/acl2014/P14-1/pdf/P14-1035.pdf},
+}
+
+@InProceedings{Bamman2019,
+  author    = {Bamman, D. and Popat, S. and Shen, S.},
+  title     = {An annotated dataset of literary entities},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {2138-2144},
+  doi       = {10.18653/v1/n19-1220},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
+@InProceedings{Bamman2020,
+  author    = {Bamman, D. and Lewke, O. and Mansoor, A.},
+  title     = {An Annotated Dataset of Coreference in English Literature},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {44-54},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aclweb.org/anthology/2020.lrec-1.6/},
 }
 
 @InProceedings{Banchs2012,
@@ -2517,6 +2573,17 @@
   doi       = {10.1145/1150402.1150462},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Berg-Kirkpatrick2012,
+  author    = {Berg-Kirkpatrick, T. and Burkett, D. and Klein, D.},
+  title     = {An Empirical Investigation of Statistical Significance in NLP},
+  booktitle = {Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  year      = {2012},
+  pages     = {995-1005},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aclweb.org/anthology/D12-1091/},
 }
 
 @InProceedings{Berhe2020,
@@ -3621,6 +3688,16 @@
   timestamp = {2019.04.12},
 }
 
+@Book{Bourdieu1996,
+  title     = {The Rules of Art: Genesis and Structure of the Literary Field},
+  publisher = {Stanford University Press},
+  year      = {1996},
+  author    = {Bourdieu, P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.sup.org/books/title/?id=2044},
+}
+
 @Article{BourgeoisBougrine2014,
   author    = {Bourgeois-Bougrine, S. and Glaveanu, V. and Botella, M. and Guillou, K. and De Biasi, P. M. and Lubart, T.},
   title     = {The creativity maze: Exploring creativity in screenplay writing.},
@@ -3905,6 +3982,16 @@
   doi       = {10.1023/a:1010933404324},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Book{Brendel2011,
+  title     = {Understanding Quotation},
+  publisher = {De Gruyter},
+  year      = {2011},
+  author    = {Brendel, E. and Meibauer, J. and Steinbach, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.degruyter.com/view/title/37578},
 }
 
 @Article{Brezovnik2015,
@@ -5773,7 +5860,6 @@
   pages     = {661-703},
   doi       = {10.1137/070710111},
   owner     = {xavier},
-  publisher = {SIAM},
   timestamp = {2015.11.22},
 }
 
@@ -6860,6 +6946,19 @@
   timestamp = {2019.03.24},
 }
 
+@Article{DelVicario2016,
+  author    = {Del Vicario, M. and Bessi, A. and Zollo, F. and Petroni, F. and Scala, A. and Caldarelli, G. and Stanley, H. E. and Quattrociocchi, W.},
+  title     = {The spreading of misinformation online},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2016},
+  volume    = {113},
+  number    = {3},
+  pages     = {554-559},
+  doi       = {10.1073/pnas.1517441113},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{DeMeo2015,
   author    = {De Meo, P. and Ferrara, E. and Rosaci, D. and Sarne, G. M. L.},
   title     = {Trust and Compactness in Social Network Groups},
@@ -7472,6 +7571,17 @@
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Dror2018,
+  author    = {Dror, R. and Baumer, G. and Shlomov, S. and Reichart, R.},
+  title     = {The Hitchhiker's Guide to Testing Statistical Significance in Natural Language Processing},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {1383-1392},
+  doi       = {10.18653/v1/p18-1128},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Drouin2014,
   author    = {Drouin, J.},
   title     = {Close-and distant-reading modernism: Network analysis, text mining, and teaching the little review},
@@ -7889,6 +7999,18 @@
   doi       = {10.1137/1021092},
   owner     = {Vincent},
   timestamp = {2019.04.01},
+}
+
+@Book{Efron1982,
+  title     = {The Jackknife, the Bootstrap and Other Resampling Plans},
+  publisher = {Society for Industrial and Applied Mathematics},
+  year      = {1982},
+  author    = {Efron, B.},
+  volume    = {38},
+  series    = {CBMS-NSF Regional Conference Series in Applied Mathematics},
+  doi       = {10.1137/1.9781611970319},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @InProceedings{Efros2003,
@@ -9241,6 +9363,19 @@
   timestamp = {2019.04.02},
 }
 
+@Article{Foster2004,
+  author    = {Foster, E. K.},
+  title     = {Research on Gossip: Taxonomy, Methods, and Future Directions},
+  journal   = {Review of General Psychology},
+  year      = {2004},
+  volume    = {8},
+  number    = {2},
+  pages     = {78-99},
+  doi       = {10.1037/1089-2680.8.2.78},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Book{Fowler1982,
   title     = {Kinds of Literature: An Introduction to the Theory of Genres and Modes},
   publisher = {Clarendon Press},
@@ -9399,6 +9534,16 @@
   doi       = {10.1037/1082-989x.8.4.468},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Friggeri2014,
+  author    = {Friggeri, A. and Adamic, L. and Eckles, D. and Cheng, J.},
+  title     = {Rumor cascades},
+  booktitle = {8th International AAAI Conference on Weblogs and Social Media},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8122},
 }
 
 @Article{Fronczak2004,
@@ -10761,6 +10906,17 @@
   doi       = {10.1145/2939672.2939754},
   owner     = {Vincent},
   timestamp = {2019.06.29},
+}
+
+@InProceedings{Gruhl2004,
+  author    = {Gruhl, D. and Guha, R. and Liben-Nowell, D. and Tomkins, A.},
+  title     = {Information diffusion through blogspace},
+  booktitle = {13th conference on World Wide Web},
+  year      = {2004},
+  pages     = {491-501},
+  doi       = {10.1145/988672.988739},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @InProceedings{Gruzd2008,
@@ -12209,6 +12365,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/wcs.1203},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Hovy2015,
+  author    = {Hovy, E. and Marcus, M. and Palmer, M. and Ramshaw, L. and Weischedel, R.},
+  title     = {OntoNotes: The 90% Solution},
+  booktitle = {Human Language Technology Conference of the NAACL},
+  year      = {2015},
+  pages     = {57-60},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aclweb.org/anthology/N06-2015/},
 }
 
 @Book{Howe1930,
@@ -14730,6 +14897,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/C18-1117},
 }
 
+@InProceedings{Kwon2013,
+  author    = {Kwon, S. and Cha, M. and Jung, K. and Chen, W. and Wang, Y.},
+  title     = {Prominent Features of Rumor Propagation in Online Social Media},
+  booktitle = {13th IEEE International Conference on Data Mining},
+  year      = {2013},
+  pages     = {1103-1108},
+  doi       = {10.1109/icdm.2013.61},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Kwon2016,
   author    = {Kwon, H. and Kwon, H. T. and Yoon, W. C.},
   title     = {An information-theoretic evaluation of narrative complexity for interactive writing support},
@@ -15408,6 +15586,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.27},
 }
 
+@InProceedings{Lee2017b,
+  author    = {Lee, K. and He, L. and Lewis, M. and Zettlemoyer, L.},
+  title     = {End-to-end Neural Coreference Resolution},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2017},
+  pages     = {188-197},
+  doi       = {10.18653/v1/d17-1018},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Lee2018,
   author    = {Lee, O.-J. and Jung, J. J.},
   title     = {Modeling affective character network for story analytics},
@@ -15590,6 +15779,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@InProceedings{Leskovec2007,
+  author    = {Leskovec, J. and McGlohon, M. and Faloutsos, C. and Glance, N. and Hurst, M.},
+  title     = {Patterns of Cascading Behavior in Large Blog Graphs},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2007},
+  pages     = {551-556},
+  doi       = {10.1137/1.9781611972771.60},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
+@InProceedings{Leskovec2009,
+  author    = {Leskovec, J. and Backstrom, L. and Kleinberg, J.},
+  title     = {Meme-tracking and the dynamics of the news cycle},
+  booktitle = {15th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2009},
+  pages     = {497-506},
+  doi       = {10.1145/1557019.1557077},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Leskovec2009a,
   author    = {Leskovec, J. and Lang, K. J. and Dasgupta, A. and Mahoney, M. W.},
   title     = {Community Structure in Large Networks: Natural Cluster Sizes and the Absence of Large Well-Defined Clusters},
@@ -15693,6 +15904,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://www.press.uchicago.edu/ucp/books/book/chicago/E/bo3684144.html},
+}
+
+@Article{Levine2009,
+  author    = {Levine, C.},
+  title     = {Narrative Networks: Bleak House and the Affordances of Form},
+  journal   = {Novel: A Forum on Fiction},
+  year      = {2009},
+  volume    = {42},
+  number    = {3},
+  pages     = {517-523},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.jstor.org/stable/27764354},
 }
 
 @Book{Levine2015,
@@ -17492,6 +17716,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Margolis2012,
+  author    = {Margolis, S.},
+  title     = {Network Theory circa 1800: Charles Brockden Brown's ``Arthur Mervyn''},
+  journal   = {Novel: A Forum on Fiction},
+  year      = {2012},
+  volume    = {45},
+  number    = {3},
+  pages     = {343-367},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.jstor.org/stable/41810120},
+}
+
 @TechReport{Margonari2011,
   author      = {Margonari, M.},
   title       = {An Unsupervised Text Classification Method Implemented in Scilab},
@@ -17619,6 +17856,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.90.052808},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Martin2014a,
+  author    = {Martin, N.},
+  title     = {Literature and Gossip - An Introduction},
+  journal   = {Forum for Modern Language Studies},
+  year      = {2014},
+  volume    = {50},
+  number    = {2},
+  pages     = {135-141},
+  doi       = {10.1093/fmls/cqu017},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @InProceedings{Martin2018,
@@ -17859,6 +18109,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/11823285_121},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Mazanec2018,
+  author    = {Mazanec, T. J.},
+  title     = {Networks of Exchange Poetry in Late Medieval China: Notes toward a Dynamic History of Tang Literature},
+  journal   = {Journal of Chinese Literature and Culture},
+  year      = {2018},
+  volume    = {5},
+  number    = {2},
+  pages     = {322-359},
+  doi       = {10.1215/23290048-7257015},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @Article{McCallum2007,
@@ -18250,6 +18513,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/30005631},
 }
 
+@Article{MeyerSpacks1982,
+  author    = {Meyer Spacks, P.},
+  title     = {In Praise of Gossip},
+  journal   = {Hudson Review},
+  year      = {1982},
+  volume    = {35},
+  number    = {1},
+  pages     = {19},
+  doi       = {10.2307/3851309},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @InProceedings{MeyerzuEissen2004,
   author    = {Meyer zu Eissen, S. and Stein, B.},
   title     = {Genre Classification of Web Pages},
@@ -18391,6 +18667,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=2984237},
+}
+
+@InCollection{Miller2011,
+  author    = {Miller, Joel C. and Hagberg, Aric},
+  title     = {Efficient Generation of Networks with Given Expected Degrees},
+  booktitle = {International Workshop on Algorithms and Models for the Web-Graph},
+  publisher = {Springer},
+  year      = {2011},
+  volume    = {6732},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {115-126},
+  doi       = {10.1007/978-3-642-21286-4_10},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @Article{Miller2019,
@@ -19343,6 +19633,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.24},
 }
 
+@InProceedings{Muzny2017a,
+  author    = {Muzny, G. and Fang, M. and Chang, A. and Jurafsky, D.},
+  title     = {A Two-stage Sieve Approach for Quote Attribution},
+  booktitle = {15th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2017},
+  pages     = {460-470},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aclweb.org/anthology/E17-1044},
+}
+
 @Article{Myers1981,
   author    = {Myers, C. S. and Rabiner, L. R.},
   title     = {A Comparative Study of Several Dynamic Time-Warping Algorithms for Connected-Word Recognition},
@@ -20038,6 +20339,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2013.05.28},
 }
 
+@InProceedings{Niculae2015,
+  author    = {Niculae, V. and Suen, C. and Zhang, J. and Danescu-Niculescu-Mizil, C. and Leskovec, J.},
+  title     = {QUOTUS: The Structure of Political Media Coverage as Revealed by Quoting Patterns},
+  booktitle = {24th International Conference on World Wide Web},
+  year      = {2015},
+  pages     = {798-808},
+  doi       = {10.1145/2736277.2741688},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Niehaus2014,
   author    = {Niehaus, J. and Young, R. M.},
   title     = {Cognitive models of discourse comprehension for narrative generation},
@@ -20178,6 +20490,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.vanhamel.nl/codecs/N%C3%AD_%C3%9Ardail_2011a},
+}
+
+@InProceedings{Nivre2016,
+  author    = {Nivre, J. and de Marneffe, M.-C. and Ginter, F. and Goldberg, Y. and Hajič, J. and Manning, C. D. and McDonald, R. and Petrov, S. and Pyysalo, S. and Silveira, N. and Tsarfaty, R. and Zeman, D.},
+  title     = {Universal Dependencies v1: A Multilingual Treebank Collection},
+  booktitle = {10th International Conference on Language Resources and Evaluation},
+  year      = {2016},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://www.aclweb.org/anthology/L16-1262},
 }
 
 @Article{Noh2005,
@@ -24120,6 +24442,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Scripts_Plans_Goals_and_Understanding.html?id=YZ99AAAAMAAJ&redir_esc=y},
 }
 
+@Book{Schantz2008,
+  title     = {Gossip, Letters, Phones: The Scandal of Female Networks in Film and Literature},
+  publisher = {Oxford University Press},
+  year      = {2008},
+  author    = {Schantz, N.},
+  doi       = {10.1093/acprof:oso/9780195335910.001.0001},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Schich2014,
   author    = {Schich, M. and Song, C. and Ahn, Y.-Y. and Mirsky, A. and Martino, M. and Barabasi, A.-L. and Helbing, D.},
   title     = {A network framework of cultural history},
@@ -24298,6 +24630,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.physa.2004.03.019},
   owner     = {Vincent},
   timestamp = {2019.04.01},
+}
+
+@Book{Sedgwick1985,
+  title     = {Between Men: English Literature and Male Homosocial Desire},
+  publisher = {Columbia University Press},
+  year      = {1985},
+  author    = {Sedgwick, E.},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {http://cup.columbia.edu/book/between-men/9780231176293},
 }
 
 @Article{Segel2010,
@@ -25089,6 +25431,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{So2013,
+  author    = {So, R. J. and Long, H.},
+  title     = {Network Analysis and the Sociology of Modernism},
+  journal   = {boundary 2},
+  year      = {2013},
+  volume    = {40},
+  number    = {2},
+  pages     = {147-182},
+  doi       = {10.1215/01903659-2151839},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Soares2014,
   author    = {Soares, M. and Viana, P.},
   title     = {Tuning metadata for better movie content-based recommendation systems},
@@ -25199,6 +25554,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://www.reddit.com/r/dataisbeautiful/comments/8ikpap/oc_graphing_the_character_interactions_from_the/},
   owner        = {Vincent},
   timestamp    = {2018.05.12},
+}
+
+@Book{Spacks1985,
+  title     = {Gossip},
+  publisher = {Knopf},
+  year      = {1985},
+  author    = {Spacks, P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+  url       = {https://books.google.fr/books/about/Gossip.html?id=mA0OAQAAMAAJ},
 }
 
 @Article{Sparavigna2013,
@@ -27652,6 +28017,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Vosoughi2018,
+  author    = {Vosoughi, S. and Roy, D. and Aral, S.},
+  title     = {The spread of true and false news online},
+  journal   = {Science},
+  year      = {2018},
+  volume    = {359},
+  number    = {6380},
+  pages     = {1146-1151},
+  doi       = {10.1126/science.aap9559},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
+}
+
 @Article{Vrigkas2015,
   author    = {Vrigkas, M. and Nikou, C. and Kakadiaris, I. A.},
   title     = {A Review of Human Activity Recognition Methods},
@@ -28344,6 +28722,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://books.google.fr/books/about/Understanding_Goal_Based_Stories.html?id=hmQoAQAAIAAJ&redir_esc=y},
+}
+
+@Article{Wilkerson2015,
+  author    = {Wilkerson, J. and Smith, D. and Stramp, N.},
+  title     = {Tracing the Flow of Policy Ideas in Legislatures: A Text Reuse Approach},
+  journal   = {American Journal of Political Science},
+  year      = {2015},
+  volume    = {59},
+  number    = {4},
+  pages     = {943-956},
+  doi       = {10.1111/ajps.12175},
+  owner     = {Vincent},
+  timestamp = {2020.07.22},
 }
 
 @Article{Willett1988,
