--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2099,6 +2099,17 @@
   timestamp = {2017.07.24},
 }
 
+@InProceedings{Barth2018,
+  author    = {Barth, F. and Kim, E. and Murr, S. and Klinger, R.},
+  title     = {A reporting tool for relational visualization and analysis of character mentions in literature},
+  booktitle = {Digital Humanities im deutschsprachigen Raum},
+  year      = {2018},
+  pages     = {123-127},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {http://www.romanklinger.de/publications/BarthKimMurrKlinger2018.html},
+}
+
 @Article{Barthes1975,
   author    = {Barthes, R.},
   title     = {An introduction to the structural analysis of narrative},
@@ -3338,6 +3349,17 @@
   timestamp = {2016.08.06},
 }
 
+@Book{Bondy1976,
+  title     = {Graph theory with applications},
+  publisher = {Macmillan},
+  year      = {1976},
+  author    = {Bondy, J. A. and Murty, U. S. R.},
+  volume    = {290},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.zib.de/groetschel/teaching/WS1314/BondyMurtyGTWA.pdf},
+}
+
 @InProceedings{Bong2011,
   author    = {Bong, S.-Y. and Hwang, K.-B.},
   title     = {Keyphrase extraction in biomedical publications using mesh and intraphrase word co-occurrence information},
@@ -4379,6 +4401,7 @@
   number    = {2},
   pages     = {61-70},
   doi       = {10.1093/llc/2.2.61},
+  owner     = {Vincent},
   timestamp = {2019.03.28},
 }
 
@@ -8510,6 +8533,16 @@
   timestamp = {2018.11.10},
 }
 
+@Article{Everton2019,
+  author    = {Everton, S. and Everton, T. and Green, A. and Hamblin, C. and Schroeder, R.},
+  title     = {Strong Ties and Where to Find Them: Or, Why Neville (and Ginny and Seamus) and Bellatrix (and Lucius) Might Be More Important than Harry and Tom},
+  journal   = {Social Science Research Network},
+  year      = {2019},
+  doi       = {10.2139/ssrn.3389503},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @InProceedings{Evgeniou2004,
   author    = {Evgeniou, T. and Pontil, M.},
   title     = {Regularized multi--task learning},
@@ -11898,6 +11931,16 @@
   timestamp = {2017.12.16},
 }
 
+@Article{Heuser2016,
+  author    = {Heuser, R. and Moretti, F. and Steiner, E.},
+  title     = {The Emotions of London},
+  journal   = {Stanford Literary Lab},
+  year      = {2016},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://litlab.stanford.edu/LiteraryLabPamphlet13.pdf},
+}
+
 @Article{Heyd2010,
   author    = {Heyd, T.},
   title     = {How you guys doin'? Staged orality and emerging plural address in the television series Friends},
@@ -13157,6 +13200,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InCollection{Jockers2015,
+  author    = {Jockers, M. L. and Underwood, T.},
+  title     = {Text-Mining the Humanities},
+  booktitle = {A New Companion to Digital Humanities},
+  publisher = {John Wiley \& Sons},
+  year      = {2015},
+  chapter   = {20},
+  pages     = {291-306},
+  doi       = {10.1002/9781118680605.ch20},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @InCollection{Johnson1994,
   author    = {Johnson, J.},
   title     = {Anthropological Contributions to the Study of Social Networks: A Review},
@@ -14027,6 +14083,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Kim2017a,
+  author    = {Kim, E. and Padó, S. and Klinger, R.},
+  title     = {Investigating the Relationship between Literary Genres and Emotional Plot Development},
+  booktitle = {Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2017},
+  pages     = {17-26},
+  doi       = {10.18653/v1/w17-2203},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Kim2018a,
   author    = {Kim, N. W. and Bach, B. and Im, H. and Schriber, S. and Gross, M. and Pfister, H.},
   title     = {Visualizing Nonlinear Narratives with Story Curves},
@@ -14038,6 +14105,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2017.2744118},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Article{Kim2019a,
+  author    = {Kim, E. and Klinger, R.},
+  title     = {A Survey on Sentiment and Emotion Analysis for Computational Literary Studies},
+  journal   = {Zeitschrift für digitale Geisteswissenschaften},
+  year      = {2019},
+  volume    = {4},
+  pages     = {7},
+  doi       = {10.17175/2019_008},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
+@InProceedings{Kim2019b,
+  author    = {Kim, E. and Klinger, R.},
+  title     = {Frowning Frodo, wincing Leia, and a seriously great friendship: Learning to classify emotional relationships of fictional characters},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {647-653},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.aclweb.org/anthology/N19-1067.pdf},
 }
 
 @InProceedings{Kingma2015,
@@ -14248,6 +14338,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://bklimt.com/papers/2004_klimt_ceas.pdf},
+}
+
+@InProceedings{Klinger2016,
+  author    = {Klinger, R. and Suliya, S. S. and Reiter , N.},
+  title     = {Automatic Emotion Detection for Quantitative Literary Studies - A Case Study on Kafka's 'Das Schloss' and 'Amerika'},
+  booktitle = {Digital Humanities},
+  year      = {2016},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {http://www.romanklinger.de/publications/klinger-samat-reiter2016.pdf},
 }
 
 @Book{Knoke1982,
@@ -19198,7 +19298,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Moretti2017,
   author    = {Moretti, F.},
   title     = {Patterns and interpretation},
-  journal   = {Literary Lab},
+  journal   = {Stanford Literary Lab},
   year      = {2017},
   volume    = {15},
   owner     = {Vincent},
@@ -19587,6 +19687,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/217306.217311},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InProceedings{Murr2017,
+  author    = {Murr, S. and Barth, F.},
+  title     = {Digital Analysis of the Literary Reception of J. W. v. Goethe's 'Die Leiden des jungen Werthers'},
+  booktitle = {Digital Humanities},
+  year      = {2017},
+  abstract  = {The impact of Johann Wolfgang von Goethe's epistolary novel Die Leiden des jungen Werthers marks a singular moment in German literary history, as it sparked a remarkable critical and productive literary reception. After the publication in 1774, so-called Wertheriaden — literary adaptations that are formally, thematically and structurally guided by Goethe’s novel — appeared in various languages. These texts form our corpus for the Werther Project, which is part of the interdisciplinary DH Project CRETA of the University of Stuttgart.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://dh2017.adho.org/abstracts/352/352.pdf},
 }
 
 @InProceedings{Mutton2002,
@@ -29931,6 +30042,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.03},
   url       = {http://ceur-ws.org/Vol-1646/paper2.pdf},
+}
+
+@InProceedings{Zehe2020,
+  author        = {Zehe, A. and Arns, J. and Hettinger, L. and Hotho, A.},
+  title         = {HarryMotions - Classifying Relationships in Harry Potter based on Emotion Analysis},
+  booktitle     = {5th Swiss Text Analytics Conference / 16th Conference on Natural Language Processing},
+  year          = {2020},
+  volume        = {2624},
+  series        = {CEUR Workshop Proceedings},
+  pages         = {12},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2020.06.23},
+  url           = {http://ceur-ws.org/Vol-2624/paper12.pdf},
 }
 
 @Article{Zelenko2003,
